libwebgpu/lib/lib_webgpu.h


typedef int HTML_PREDEFINED_COLOR_SPACE;
void wgpu_request_animation_frame_loop(WGPU_BOOL (*callback)(double time, void *userData), void *userData);
typedef int WGPU_TEXTURE_USAGE_FLAGS;
WGPU_BOOL wgpu_is_texture_view(WGpuObjectBase object);
typedef struct WGpuTextureViewDescriptor
{
  WGPU_TEXTURE_FORMAT format;
  WGPU_TEXTURE_VIEW_DIMENSION dimension;
  WGPU_TEXTURE_USAGE_FLAGS usage; 
  WGPU_TEXTURE_ASPECT aspect; 
  uint32_t baseMipLevel; 
  uint32_t mipLevelCount;
  uint32_t baseArrayLayer; 
  uint32_t arrayLayerCount;
} WGpuTextureViewDescriptor;
extern const WGpuTextureViewDescriptor WGPU_TEXTURE_VIEW_DESCRIPTOR_DEFAULT_INITIALIZER;
typedef int WGPU_TEXTURE_VIEW_DIMENSION;
typedef int WGPU_TEXTURE_ASPECT;
typedef int WGPU_TEXTURE_FORMAT;
WGPU_BOOL wgpu_is_external_texture(WGpuObjectBase object);
typedef struct WGpuExternalTextureDescriptor
{
  WGpuObjectBase source;
  HTML_PREDEFINED_COLOR_SPACE colorSpace;
} WGpuExternalTextureDescriptor;
extern const WGpuExternalTextureDescriptor WGPU_EXTERNAL_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER;
WGPU_BOOL wgpu_is_sampler(WGpuObjectBase object);
typedef struct WGpuSamplerDescriptor
{
  WGPU_ADDRESS_MODE addressModeU; 
  WGPU_ADDRESS_MODE addressModeV; 
  WGPU_ADDRESS_MODE addressModeW; 
  WGPU_FILTER_MODE magFilter;     
  WGPU_FILTER_MODE minFilter;     
  WGPU_MIPMAP_FILTER_MODE mipmapFilter; 
  float lodMinClamp;              
  float lodMaxClamp;              
  WGPU_COMPARE_FUNCTION compare;  
  uint32_t maxAnisotropy;         
} WGpuSamplerDescriptor;
extern const WGpuSamplerDescriptor WGPU_SAMPLER_DESCRIPTOR_DEFAULT_INITIALIZER;
typedef int WGPU_ADDRESS_MODE;
typedef int WGPU_FILTER_MODE;
typedef int WGPU_MIPMAP_FILTER_MODE;
typedef int WGPU_COMPARE_FUNCTION;
typedef WGpuObjectBase WGpuBindGroupLayout;
WGPU_BOOL wgpu_is_bind_group_layout(WGpuObjectBase object);
typedef int WGPU_BUFFER_BINDING_TYPE;
typedef struct WGpuBufferBindingLayout
{
  WGPU_BUFFER_BINDING_TYPE type;
  int hasDynamicOffset;
  uint64_t minBindingSize;
} WGpuBufferBindingLayout;
extern const WGpuBufferBindingLayout WGPU_BUFFER_BINDING_LAYOUT_DEFAULT_INITIALIZER;
typedef int WGPU_SAMPLER_BINDING_TYPE;
typedef struct WGpuSamplerBindingLayout
{
  WGPU_SAMPLER_BINDING_TYPE type;
} WGpuSamplerBindingLayout;
extern const WGpuSamplerBindingLayout WGPU_SAMPLER_BINDING_LAYOUT_DEFAULT_INITIALIZER;
typedef int WGPU_TEXTURE_SAMPLE_TYPE;
typedef struct WGpuTextureBindingLayout
{
  WGPU_TEXTURE_SAMPLE_TYPE sampleType;
  WGPU_TEXTURE_VIEW_DIMENSION viewDimension;
  WGPU_BOOL multisampled;
} WGpuTextureBindingLayout;
extern const WGpuTextureBindingLayout WGPU_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER;
typedef int WGPU_STORAGE_TEXTURE_ACCESS;
typedef struct WGpuStorageTextureBindingLayout
{
  WGPU_STORAGE_TEXTURE_ACCESS access;
  WGPU_TEXTURE_FORMAT format;
  WGPU_TEXTURE_VIEW_DIMENSION viewDimension;
} WGpuStorageTextureBindingLayout;
extern const WGpuStorageTextureBindingLayout WGPU_STORAGE_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER;
WGPU_BOOL wgpu_is_bind_group(WGpuObjectBase object);
typedef struct WGpuBindGroupEntry
{
  uint32_t binding;
  WGpuObjectBase resource;
  uint64_t bufferBindOffset;
  uint64_t bufferBindSize; 
} WGpuBindGroupEntry;
extern const WGpuBindGroupEntry WGPU_BIND_GROUP_ENTRY_DEFAULT_INITIALIZER;
typedef WGpuObjectBase WGpuPipelineLayout;
WGPU_BOOL wgpu_is_pipeline_layout(WGpuObjectBase object);
typedef WGpuObjectBase WGpuShaderModule;
WGPU_BOOL wgpu_is_shader_module(WGpuObjectBase object);
typedef void (*WGpuGetCompilationInfoCallback)(WGpuShaderModule shaderModule, WGpuCompilationInfo *compilationInfo NOTNULL, void *userData);
void wgpu_shader_module_get_compilation_info_async(WGpuShaderModule shaderModule, WGpuGetCompilationInfoCallback callback, void *userData);
typedef struct _WGPU_ALIGN_TO_64BITS WGpuShaderModuleCompilationHint
{
  const char *entryPoint;
  _WGPU_PTR_PADDING(0);
  WGpuPipelineLayout layout;  
  uint32_t unused_padding;
} WGpuShaderModuleCompilationHint;
extern const WGpuShaderModuleCompilationHint WGPU_SHADER_MODULE_COMPILATION_HINT_DEFAULT_INITIALIZER;
typedef int WGPU_COMPILATION_MESSAGE_TYPE;
const char *wgpu_compilation_message_type_to_string(WGPU_COMPILATION_MESSAGE_TYPE type);
typedef struct WGpuCompilationInfo
{
  int numMessages;
  uint32_t unused_padding;
  WGpuCompilationMessage* messages;
} WGpuCompilationInfo;
WGpuBindGroupLayout wgpu_pipeline_get_bind_group_layout(WGpuObjectBase pipelineBase, uint32_t index);
WGPU_BOOL wgpu_is_compute_pipeline(WGpuObjectBase object);
WGPU_BOOL wgpu_is_render_pipeline(WGpuObjectBase object);
WGPU_BOOL wgpu_is_command_buffer(WGpuObjectBase object);
typedef WGpuObjectBase WGpuDebugCommandsMixin; 
void wgpu_encoder_push_debug_group(WGpuDebugCommandsMixin encoder, const char *groupLabel NOTNULL);
void wgpu_encoder_pop_debug_group(WGpuDebugCommandsMixin encoder);
void wgpu_encoder_insert_debug_marker(WGpuDebugCommandsMixin encoder, const char *markerLabel NOTNULL);
typedef WGpuObjectBase WGpuCommandEncoder;
WGPU_BOOL wgpu_is_command_encoder(WGpuObjectBase object);
WGpuRenderPassEncoder wgpu_command_encoder_begin_render_pass(WGpuCommandEncoder commandEncoder, const WGpuRenderPassDescriptor *renderPassDesc NOTNULL);
typedef WGpuObjectBase WGpuRenderPassEncoder;
typedef struct WGpuRenderPassDepthStencilAttachment
{
  WGpuTextureView view;
  WGPU_LOAD_OP depthLoadOp; 
  float depthClearValue;
  WGPU_STORE_OP depthStoreOp;
  WGPU_BOOL depthReadOnly;
  WGPU_LOAD_OP stencilLoadOp;  
  uint32_t stencilClearValue;
  WGPU_STORE_OP stencilStoreOp;
  WGPU_BOOL stencilReadOnly;
} WGpuRenderPassDepthStencilAttachment;
typedef WGpuObjectBase WGpuQuerySet;
typedef struct WGpuRenderPassTimestampWrites
{
  WGpuQuerySet querySet;
  int32_t beginningOfPassWriteIndex; 
  int32_t endOfPassWriteIndex;       
} WGpuRenderPassTimestampWrites;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuRenderPassDescriptor
{
  double_int53_t maxDrawCount; 
  const WGpuRenderPassColorAttachment *colorAttachments;
  _WGPU_PTR_PADDING(0);
  int numColorAttachments;
  WGpuRenderPassDepthStencilAttachment depthStencilAttachment;
  WGpuQuerySet occlusionQuerySet;
  WGpuRenderPassTimestampWrites timestampWrites;
} WGpuRenderPassDescriptor;
typedef struct WGpuRenderPassColorAttachment
{
  WGpuTextureView view;
  int depthSlice;
  WGpuTextureView resolveTarget;
  WGPU_STORE_OP storeOp; 
  WGPU_LOAD_OP loadOp; 
  uint32_t unused_padding; 
  WGpuColor clearValue; 
} WGpuRenderPassColorAttachment;