lib/ffi/ffi_webgpu.dart


  late final _wgpu_is_texture_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_texture_view');
  late final _wgpu_is_texture_view =
      _wgpu_is_texture_viewPtr.asFunction<int Function(WGpuObjectBase)>();

  late final ffi.Pointer<WGpuTextureViewDescriptor>
      _WGPU_TEXTURE_VIEW_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuTextureViewDescriptor>(
          'WGPU_TEXTURE_VIEW_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuTextureViewDescriptor
      get WGPU_TEXTURE_VIEW_DESCRIPTOR_DEFAULT_INITIALIZER =>
          _WGPU_TEXTURE_VIEW_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  int wgpu_is_external_texture(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_external_texture(
      object,
    );
  }

  late final _wgpu_is_external_texturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_external_texture');
  late final _wgpu_is_external_texture =
      _wgpu_is_external_texturePtr.asFunction<int Function(WGpuObjectBase)>();

  late final ffi.Pointer<WGpuExternalTextureDescriptor>
      _WGPU_EXTERNAL_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuExternalTextureDescriptor>(
          'WGPU_EXTERNAL_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuExternalTextureDescriptor
      get WGPU_EXTERNAL_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER =>
          _WGPU_EXTERNAL_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  int wgpu_is_sampler(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_sampler(
      object,
    );
  }

  late final _wgpu_is_samplerPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_sampler');
  late final _wgpu_is_sampler =
      _wgpu_is_samplerPtr.asFunction<int Function(WGpuObjectBase)>();

  late final ffi.Pointer<WGpuSamplerDescriptor>
      _WGPU_SAMPLER_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuSamplerDescriptor>(
          'WGPU_SAMPLER_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuSamplerDescriptor get WGPU_SAMPLER_DESCRIPTOR_DEFAULT_INITIALIZER =>
      _WGPU_SAMPLER_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  int wgpu_is_bind_group_layout(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_bind_group_layout(
      object,
    );
  }

  late final _wgpu_is_bind_group_layoutPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_bind_group_layout');
  late final _wgpu_is_bind_group_layout =
      _wgpu_is_bind_group_layoutPtr.asFunction<int Function(WGpuObjectBase)>();

  late final ffi.Pointer<WGpuBufferBindingLayout>
      _WGPU_BUFFER_BINDING_LAYOUT_DEFAULT_INITIALIZER =
      _lookup<WGpuBufferBindingLayout>(
          'WGPU_BUFFER_BINDING_LAYOUT_DEFAULT_INITIALIZER');

  WGpuBufferBindingLayout get WGPU_BUFFER_BINDING_LAYOUT_DEFAULT_INITIALIZER =>
      _WGPU_BUFFER_BINDING_LAYOUT_DEFAULT_INITIALIZER.ref;

  late final ffi.Pointer<WGpuSamplerBindingLayout>
      _WGPU_SAMPLER_BINDING_LAYOUT_DEFAULT_INITIALIZER =
      _lookup<WGpuSamplerBindingLayout>(
          'WGPU_SAMPLER_BINDING_LAYOUT_DEFAULT_INITIALIZER');

  WGpuSamplerBindingLayout
      get WGPU_SAMPLER_BINDING_LAYOUT_DEFAULT_INITIALIZER =>
          _WGPU_SAMPLER_BINDING_LAYOUT_DEFAULT_INITIALIZER.ref;

  late final ffi.Pointer<WGpuTextureBindingLayout>
      _WGPU_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER =
      _lookup<WGpuTextureBindingLayout>(
          'WGPU_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER');

  WGpuTextureBindingLayout
      get WGPU_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER =>
          _WGPU_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER.ref;

  late final ffi.Pointer<WGpuStorageTextureBindingLayout>
      _WGPU_STORAGE_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER =
      _lookup<WGpuStorageTextureBindingLayout>(
          'WGPU_STORAGE_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER');

  WGpuStorageTextureBindingLayout
      get WGPU_STORAGE_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER =>
          _WGPU_STORAGE_TEXTURE_BINDING_LAYOUT_DEFAULT_INITIALIZER.ref;

  int wgpu_is_bind_group(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_bind_group(
      object,
    );
  }

  late final _wgpu_is_bind_groupPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_bind_group');
  late final _wgpu_is_bind_group =
      _wgpu_is_bind_groupPtr.asFunction<int Function(WGpuObjectBase)>();

  late final ffi.Pointer<WGpuBindGroupEntry>
      _WGPU_BIND_GROUP_ENTRY_DEFAULT_INITIALIZER =
      _lookup<WGpuBindGroupEntry>('WGPU_BIND_GROUP_ENTRY_DEFAULT_INITIALIZER');

  WGpuBindGroupEntry get WGPU_BIND_GROUP_ENTRY_DEFAULT_INITIALIZER =>
      _WGPU_BIND_GROUP_ENTRY_DEFAULT_INITIALIZER.ref;

  int wgpu_is_pipeline_layout(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_pipeline_layout(
      object,
    );
  }

  late final _wgpu_is_pipeline_layoutPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_pipeline_layout');
  late final _wgpu_is_pipeline_layout =
      _wgpu_is_pipeline_layoutPtr.asFunction<int Function(WGpuObjectBase)>();

  int wgpu_is_shader_module(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_shader_module(
      object,
    );
  }

  late final _wgpu_is_shader_modulePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_shader_module');
  late final _wgpu_is_shader_module =
      _wgpu_is_shader_modulePtr.asFunction<int Function(WGpuObjectBase)>();

  void wgpu_shader_module_get_compilation_info_async(
    WGpuShaderModule shaderModule,
    WGpuGetCompilationInfoCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_shader_module_get_compilation_info_async(
      shaderModule,
      callback,
      userData,
    );
  }

  late final _wgpu_shader_module_get_compilation_info_asyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(WGpuShaderModule,
                  WGpuGetCompilationInfoCallback, ffi.Pointer<ffi.Void>)>>(
      'wgpu_shader_module_get_compilation_info_async');
  late final _wgpu_shader_module_get_compilation_info_async =
      _wgpu_shader_module_get_compilation_info_asyncPtr.asFunction<
          void Function(WGpuShaderModule, WGpuGetCompilationInfoCallback,
              ffi.Pointer<ffi.Void>)>();

  late final ffi.Pointer<WGpuShaderModuleCompilationHint>
      _WGPU_SHADER_MODULE_COMPILATION_HINT_DEFAULT_INITIALIZER =
      _lookup<WGpuShaderModuleCompilationHint>(
          'WGPU_SHADER_MODULE_COMPILATION_HINT_DEFAULT_INITIALIZER');

  WGpuShaderModuleCompilationHint
      get WGPU_SHADER_MODULE_COMPILATION_HINT_DEFAULT_INITIALIZER =>
          _WGPU_SHADER_MODULE_COMPILATION_HINT_DEFAULT_INITIALIZER.ref;

  ffi.Pointer<ffi.Char> wgpu_compilation_message_type_to_string(
    int type,
  ) {
    return _wgpu_compilation_message_type_to_string(
      type,
    );
  }

  late final _wgpu_compilation_message_type_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(WGPU_COMPILATION_MESSAGE_TYPE)>>(
      'wgpu_compilation_message_type_to_string');
  late final _wgpu_compilation_message_type_to_string =
      _wgpu_compilation_message_type_to_stringPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  WGpuBindGroupLayout wgpu_pipeline_get_bind_group_layout(
    WGpuObjectBase pipelineBase,
    int index,
  ) {
    return _wgpu_pipeline_get_bind_group_layout(
      pipelineBase,
      index,
    );
  }

  late final _wgpu_pipeline_get_bind_group_layoutPtr = _lookup<
      ffi.NativeFunction<
          WGpuBindGroupLayout Function(WGpuObjectBase,
              ffi.Uint32)>>('wgpu_pipeline_get_bind_group_layout');
  late final _wgpu_pipeline_get_bind_group_layout =
      _wgpu_pipeline_get_bind_group_layoutPtr
          .asFunction<WGpuBindGroupLayout Function(WGpuObjectBase, int)>();

  int wgpu_is_compute_pipeline(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_compute_pipeline(
      object,
    );
  }

  late final _wgpu_is_compute_pipelinePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_compute_pipeline');
  late final _wgpu_is_compute_pipeline =
      _wgpu_is_compute_pipelinePtr.asFunction<int Function(WGpuObjectBase)>();

  int wgpu_is_render_pipeline(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_render_pipeline(
      object,
    );
  }

  late final _wgpu_is_render_pipelinePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_render_pipeline');
  late final _wgpu_is_render_pipeline =
      _wgpu_is_render_pipelinePtr.asFunction<int Function(WGpuObjectBase)>();

  int wgpu_is_command_buffer(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_command_buffer(
      object,
    );
  }

  late final _wgpu_is_command_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_command_buffer');
  late final _wgpu_is_command_buffer =
      _wgpu_is_command_bufferPtr.asFunction<int Function(WGpuObjectBase)>();

  void wgpu_encoder_push_debug_group(
    WGpuDebugCommandsMixin encoder,
    ffi.Pointer<ffi.Char> groupLabel,
  ) {
    return _wgpu_encoder_push_debug_group(
      encoder,
      groupLabel,
    );
  }

  late final _wgpu_encoder_push_debug_groupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuDebugCommandsMixin,
              ffi.Pointer<ffi.Char>)>>('wgpu_encoder_push_debug_group');
  late final _wgpu_encoder_push_debug_group =
      _wgpu_encoder_push_debug_groupPtr.asFunction<
          void Function(WGpuDebugCommandsMixin, ffi.Pointer<ffi.Char>)>();

  void wgpu_encoder_pop_debug_group(
    WGpuDebugCommandsMixin encoder,
  ) {
    return _wgpu_encoder_pop_debug_group(
      encoder,
    );
  }

  late final _wgpu_encoder_pop_debug_groupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuDebugCommandsMixin)>>(
          'wgpu_encoder_pop_debug_group');
  late final _wgpu_encoder_pop_debug_group = _wgpu_encoder_pop_debug_groupPtr
      .asFunction<void Function(WGpuDebugCommandsMixin)>();

  void wgpu_encoder_insert_debug_marker(
    WGpuDebugCommandsMixin encoder,
    ffi.Pointer<ffi.Char> markerLabel,
  ) {
    return _wgpu_encoder_insert_debug_marker(
      encoder,
      markerLabel,
    );
  }

  late final _wgpu_encoder_insert_debug_markerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuDebugCommandsMixin,
              ffi.Pointer<ffi.Char>)>>('wgpu_encoder_insert_debug_marker');
  late final _wgpu_encoder_insert_debug_marker =
      _wgpu_encoder_insert_debug_markerPtr.asFunction<
          void Function(WGpuDebugCommandsMixin, ffi.Pointer<ffi.Char>)>();

  int wgpu_is_command_encoder(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_command_encoder(
      object,
    );
  }

  late final _wgpu_is_command_encoderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_command_encoder');
  late final _wgpu_is_command_encoder =
      _wgpu_is_command_encoderPtr.asFunction<int Function(WGpuObjectBase)>();

  WGpuRenderPassEncoder wgpu_command_encoder_begin_render_pass(
    WGpuCommandEncoder commandEncoder,
    ffi.Pointer<WGpuRenderPassDescriptor> renderPassDesc,
  ) {
    return _wgpu_command_encoder_begin_render_pass(
      commandEncoder,
      renderPassDesc,
    );
  }

  late final _wgpu_command_encoder_begin_render_passPtr = _lookup<
          ffi.NativeFunction<
              WGpuRenderPassEncoder Function(
                  WGpuCommandEncoder, ffi.Pointer<WGpuRenderPassDescriptor>)>>(
      'wgpu_command_encoder_begin_render_pass');
  late final _wgpu_command_encoder_begin_render_pass =
      _wgpu_command_encoder_begin_render_passPtr.asFunction<
          WGpuRenderPassEncoder Function(
              WGpuCommandEncoder, ffi.Pointer<WGpuRenderPassDescriptor>)>();
